Scope scissor bug/MSAA/WebGL2 disabling to Adreno series.

- The scissor bug originally observed on Nexus 7 turns out to affect a swath of
Adreno 3xx tablets.  Expand it and the associated MSAA disabling to all Adreno
3xx (MSAA is already not trusted on 3xx anyway).
- Retarget the Android < 6.0 MSAA+WebGL disabling to Adreno 4xx to clarify this
entry is for is a specific remaining problem suspected to exist on certain
older 4xx drivers (not very well understood/confirmed, but kainino@ requested
this entry remain pending further investigation).
- The depth texture blacklist is ancient enough that Adreno 4xx did not exist
in those days, so target it to 2xx and 3xx series (even 3xx series may be
too new for this bug to affect it, but keeping it there for safety).

BUG=707839,682075
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2797393002
Cr-Commit-Position: refs/heads/master@{#462321}

Former-commit-id: 430d8884a1783783c709bd01e544f682f5134915