gpu/config/software_rendering_list_json.cc
@@ -18,7 +18,7 @@ const char kSoftwareRenderingListJson[] = LONG_STRING_CONST(
 {
   "name": "software rendering list",
   // Please update the version number whenever you change this file.
-  "version": "12.19",
+  "version": "12.20",
   "entries": [
     {
       "id": 1,
@@ -1460,7 +1460,7 @@ LONG_STRING_CONST(
           "value": "6.0"
         }
       },
-      "gl_vendor": "Qualcomm.*",
+      "gl_renderer": "Adreno \\(TM\\) 4.*",
       "features": [
         "webgl2"
       ]
@@ -1501,8 +1501,7 @@ LONG_STRING_CONST(
       "id": 140,
       "description": "Some old Qualcomm scissor bug workaround needs disabling MSAA to work, which is a core part of WebGL 2.",
       "cr_bugs": [670607, 696627, 698197],
-      "gl_vendor": "Qualcomm.*",
-      "machine_model_name": ["Nexus 7", "KFTHWI", "KFSAWI", "KFAPWI", "KFTHWA", "KFSAWA", "KFAPWA"],
+      "gl_renderer": "Adreno \\(TM\\) 3.*",
       "features": [
         "webgl2"
       ]
